Flash crowd scripts

--- a/analysis/jains_fairness_table.tex
+++ b/analysis/jains_fairness_table.tex
@@ -2,14 +2,12 @@
 \centering
 \caption{Jain's Fairness Index by Scenario and Number of Peers}
 \label{tab:jains-fairness}
-\begin{tabular}{lrrrrr}
+\begin{tabular}{lrrrrrr}
 \toprule
-numPeers & 20 & 50 & 100 & 200 & 500 \\
-scenario &  &  &  &  &  \\
+numPeers & 10 & 20 & 50 & 100 & 200 & 500 \\
+scenario &  &  &  &  &  &  \\
 \midrule
-flash_crowd & 0.117 & 0.037 & 0.013 & 0.005 & NaN \\
-high_churn & NaN & NaN & 0.014 & NaN & NaN \\
-scalability & 0.076 & 0.061 & 0.011 & 0.006 & 0.002 \\
+unknown & 0.278 & 0.059 & 0.020 & 0.030 & 0.006 & 0.004 \\
 \bottomrule
 \end{tabular}
 \end{table}
