--- a/analysis/summary_table.tex
+++ b/analysis/summary_table.tex
@@ -6,31 +6,12 @@
 \toprule
 Scenario & Num Peers & Join Rate & Churn Rate & Baseline & Network Avg Latency (ms) & Network Cache Hit Ratio (%) & Network Requests & Origin Requests & Jain's Index & Total Requests \\
 \midrule
-Baseline & 20 & N/A & 0 & Yes & 13.00 & 0.00 & 20 & 20 & 0.00 & 577 \\
-Baseline & 50 & N/A & 0 & Yes & 13.00 & 0.00 & 50 & 50 & 0.00 & 1446 \\
-Baseline & 100 & N/A & 0 & Yes & 13.00 & 0.00 & 100 & 100 & 0.00 & 2956 \\
-Baseline & 200 & N/A & 0 & Yes & 13.00 & 0.00 & 200 & 200 & 0.00 & 5849 \\
-Flash Crowd & 20 & 2.0 & 0 & No & 10.00 & 40.00 & 20 & 12 & 0.06 & 561 \\
-Flash Crowd & 20 & 5.0 & 0 & No & 9.00 & 40.00 & 20 & 12 & 0.13 & 624 \\
-Flash Crowd & 20 & 10.0 & 0 & No & 8.00 & 65.00 & 20 & 7 & 0.16 & 596 \\
-Flash Crowd & 50 & 2.0 & 0 & No & 10.00 & 48.00 & 50 & 26 & 0.02 & 1480 \\
-Flash Crowd & 50 & 5.0 & 0 & No & 10.00 & 52.00 & 50 & 24 & 0.07 & 1399 \\
-Flash Crowd & 50 & 10.0 & 0 & No & 9.00 & 58.00 & 50 & 21 & 0.02 & 1446 \\
-Flash Crowd & 100 & 2.0 & 0 & No & 9.00 & 59.00 & 100 & 41 & 0.01 & 3041 \\
-Flash Crowd & 100 & 5.0 & 0 & No & 9.00 & 58.00 & 100 & 42 & 0.01 & 2929 \\
-Flash Crowd & 100 & 10.0 & 0 & No & 10.00 & 50.00 & 100 & 50 & 0.01 & 2933 \\
-Flash Crowd & 200 & 2.0 & 0 & No & 10.00 & 51.00 & 200 & 98 & 0.01 & 5877 \\
-Flash Crowd & 200 & 5.0 & 0 & No & 10.00 & 47.50 & 200 & 105 & 0.01 & 5928 \\
-Flash Crowd & 200 & 10.0 & 0 & No & 10.00 & 45.00 & 200 & 110 & 0.01 & 5903 \\
-High Churn & 100 & 5.0 & 0 & No & 10.00 & 48.00 & 100 & 52 & 0.01 & 2907 \\
-High Churn & 100 & 5.0 & 0.010 & No & 12.00 & 33.67 & 98 & 65 & 0.01 & 2365 \\
-High Churn & 100 & 5.0 & 0.050 & No & 17.00 & 52.81 & 89 & 42 & 0.02 & 932 \\
-High Churn & 100 & 5.0 & 0.100 & No & 22.00 & 56.98 & 86 & 37 & 0.01 & 451 \\
-Scalability & 20 & 5.0 & 0 & No & 7.00 & 75.00 & 20 & 5 & 0.08 & 1190 \\
-Scalability & 50 & 5.0 & 0 & No & 8.00 & 50.00 & 50 & 25 & 0.06 & 2954 \\
-Scalability & 100 & 5.0 & 0 & No & 8.00 & 55.00 & 100 & 45 & 0.01 & 5899 \\
-Scalability & 200 & 5.0 & 0 & No & 8.00 & 42.50 & 200 & 115 & 0.01 & 11654 \\
-Scalability & 500 & 5.0 & 0 & No & 8.00 & 46.80 & 500 & 266 & 0.00 & 29816 \\
+Unknown & 10 & 10.0 & 0 & No & 96.00 & 50.00 & 10 & 5 & 0.28 & 300 \\
+Unknown & 20 & 10.0 & 0 & No & 94.00 & 65.00 & 20 & 7 & 0.06 & 623 \\
+Unknown & 50 & 50.0 & 0 & No & 127.00 & 42.00 & 50 & 29 & 0.02 & 1513 \\
+Unknown & 100 & 100.0 & 0 & No & 107.00 & 47.47 & 99 & 52 & 0.03 & 379 \\
+Unknown & 200 & 200.0 & 0 & No & 153.00 & 27.23 & 191 & 139 & 0.01 & 249 \\
+Unknown & 500 & 500.0 & 0 & No & 185.00 & 5.45 & 404 & 382 & 0.00 & 433 \\
 \bottomrule
 \end{tabular}
 }
